--- a/cards-against-covid-client/src/screens/Expansions/Expansions.css
+++ b/cards-against-covid-client/src/screens/Expansions/Expansions.css
@@ -1,11 +1,11 @@
 @media only screen and (min-width: 1200px) {
-    .deck-maker-wrapper {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: .5rem;
-    }
+  .deck-maker-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0.5rem;
+  }
 }
 
 #pack-name {
-    width: 16rem;
+  width: 16rem;
 }
