--- a/cards-against-covid-client/src/components/Card/Card.css
+++ b/cards-against-covid-client/src/components/Card/Card.css
@@ -1,96 +1,95 @@
 .card {
-    height: 15rem;
-    width: 10rem;
-    font-weight: bold;
-    font-size: 1.2rem;
-    border-radius: min(.8rem, 4vw);
-    box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.2);
-    margin: .5rem;
-    text-align: left;
-    position: relative;
-    border: 0;
+  height: 15rem;
+  width: 10rem;
+  font-weight: bold;
+  font-size: 1.2rem;
+  border-radius: min(0.8rem, 4vw);
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
+  margin: 0.5rem;
+  text-align: left;
+  position: relative;
+  border: 0;
 }
 
 .deck .card {
-    display: inline-block;
+  display: inline-block;
 }
 
 .prompt {
-    background: black;
-    color: white;
+  background: black;
+  color: white;
 }
 
 .response,
 .multi-response {
-    background: white;
-    color: black;
+  background: white;
+  color: black;
 }
 
 .card.clickable {
-    cursor: pointer!important;
+  cursor: pointer !important;
 }
 
 .card.selected {
-    border: 3px solid #8af;
-    transform: scale(1.05);
+  border: 3px solid #8af;
+  transform: scale(1.05);
 }
 
 .card.clickable:focus {
-    outline: 3px dashed #8af;
+  outline: 3px dashed #8af;
 }
 
 .card-selected-index,
 .card-blank-index,
 .card-response-index {
-    position: absolute;
-    border-radius: 50%;
-    display: inline-grid;
-    place-items: center;
-    background: #88aaff99;
+  position: absolute;
+  border-radius: 50%;
+  display: inline-grid;
+  place-items: center;
+  background: #8af9;
 }
 
 .card-selected-index {
-    top: -1rem;
-    right: -1rem;
-    width: 2.5rem;
-    height: 2.5rem;
-    font-size: 1.5rem;
-    background: #8af;
+  top: -1rem;
+  right: -1rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  font-size: 1.5rem;
+  background: #8af;
 }
 
 .card-response-index {
-    position: relative;
-    background: #8af;
-    width: 1.5rem;
-    height: 1.5rem;
-    font-size: .9rem;
-    right: 2px;
-    bottom: 1px;
-    margin-right: 2px;
+  position: relative;
+  background: #8af;
+  width: 1.5rem;
+  height: 1.5rem;
+  font-size: 0.9rem;
+  right: 2px;
+  bottom: 1px;
+  margin-right: 2px;
 }
 
 .card-blank-index {
-    left: calc(50% - .75rem);
-    bottom: .1rem;
-    font-size: .9rem;
-    height: 1.5rem;
-    width: 1.5rem;
+  left: calc(50% - 0.75rem);
+  bottom: 0.1rem;
+  font-size: 0.9rem;
+  height: 1.5rem;
+  width: 1.5rem;
 }
 
 .card .blank {
-    display: inline-block;
-    position: relative;
+  display: inline-block;
+  position: relative;
 }
 
 .card-content {
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    padding: min(1rem, 5vw);
-    box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  padding: min(1rem, 5vw);
+  box-sizing: border-box;
 }
 
 .card-content label {
-    hyphens: auto;
-    -webkit-hyphens: auto;
+  hyphens: auto;
 }
