--- a/cards-against-covid-client/src/components/Chat/Chat.css
+++ b/cards-against-covid-client/src/components/Chat/Chat.css
@@ -1,46 +1,47 @@
 .chat-messages {
-    margin-top: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    overflow: scroll;
+  margin-top: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  overflow: scroll;
 }
 
 .chat-message {
-    text-align: left;
-    margin: .3rem
+  text-align: left;
+  margin: 0.3rem;
 }
+
 .chat-message > strong {
-    margin-right: .5rem;
+  margin-right: 0.5rem;
 }
 
 .chat input {
-    width: 100%;
-    box-sizing: border-box;
-    margin: 0;
+  width: 100%;
+  box-sizing: border-box;
+  margin: 0;
 }
 
 .chat-submit {
-    display: grid;
-    grid-template-columns: 1fr auto;
+  display: grid;
+  grid-template-columns: 1fr auto;
 }
 
 .chat-submit > .text-box > input {
-    height: 100%;
+  height: 100%;
 }
 
 .unread-count {
-    background: #d33;
-    color: #fff;
-    border-radius: 50%;
-    position: absolute;
-    top: 2px;
-    right: 2px;
-    font-size: 1rem;
-    min-width: 1.5rem;
-    height: 1.5rem;
-    display: grid;
-    place-items: center;
-    pointer-events: none;
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.3);
+  background: #d33;
+  color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  top: 2px;
+  right: 2px;
+  font-size: 1rem;
+  min-width: 1.5rem;
+  height: 1.5rem;
+  display: grid;
+  place-items: center;
+  pointer-events: none;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.3);
 }
