--- a/cards-against-covid-client/src/screens/Join/Join.css
+++ b/cards-against-covid-client/src/screens/Join/Join.css
@@ -1,13 +1,13 @@
 #join .user-info {
-    margin-top: 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #join .user-info > * {
-    display: grid;
-    grid-template-columns: 9rem 13rem;
-    margin: .5rem auto;
-    place-items: center;
+  display: grid;
+  grid-template-columns: 9rem 13rem;
+  margin: 0.5rem auto;
+  place-items: center;
 }
