--- a/cards-against-covid-client/src/components/Table/Table.css
+++ b/cards-against-covid-client/src/components/Table/Table.css
@@ -1,25 +1,9 @@
 table {
-  width: 100%;
+  border: 0 !important;
   border-collapse: collapse;
-  border: none !important;
-  border: 1px solid #444;
-  font: italic;
-  margin-top: 10px;
 }
 
-th {
-  width: 50%;
-  border-collapse: collapse;
-  border: none !important;
-  border: 0;
-  border: 1px solid #444;
-  font: italic;
-}
-
+th,
 td {
-  width: 50%;
-  border-collapse: collapse;
-  border: none !important;
-  border: 1px solid #444;
-  font: italic;
+  padding: 0.5em;
 }
